Created and styled "about" page

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -4,9 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="page-style.css">
+    <script src="https://kit.fontawesome.com/6fb872766b.js" crossorigin="anonymous"></script>
     <title>About</title>
 </head>
 <body>
+    <div class="top-content">
+        <header class="header">
+            <div class="logo">
+                <a href="../index.html">SHARRC</a>
+            </div>
+            <i id="menu-bars" class="fa-solid fa-bars"></i>
+            <ul class="nav-items">
+                <li>
+                    <a href="Pages/about.html">ABOUT</a>
+                </li>
+                <li>
+                    <a href="Pages/about.html">PROJECTS</a>
+                </li>
+                <li>
+                    <a href="Pages/about.html">RESOURCES</a>
+                </li> 
+                <li>
+                    <a href="Pages/about.html">FUNDING</a>
+                </li>
+                <li>
+                    <a href="Pages/about.html">CONTACT</a>
+                </li>
+            </ul>
+        </header>
+
+        <div class="hero">
+            <div class="hero-content-wrapper">
+                <h1 class="hero-header">About</h1>
+                <div class="hero-content">
+                    Enhancing humanity through innovative solutions in sports engineering, sports performance, 
+                    health, and rehabilitation to active lifestyles. 
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <section class="text-section">
+        <div class="para-one">
+            At SHARRC, we believe that technological innovation can play a crucial role 
+            in improving sports access, performance, equipment, and rehabilitation outcomes. 
+            We are committed to using innovative approaches to improve health outcomes and 
+            assist with Sport NZ's vision of "getting Every Body Active in Aotearoa New 
+            Zealand." Our team is dedicated to making a positive impact on the health of our 
+            nation, and we invite you to join us in promoting a healthy and active lifestyle.
+        </div>
+    </section>
     <!-- This page will be broken up into several sections
     SECTION 1 - small hero section:
         nice picture and motivational, but vague, statemnent about SHARRC's vision
@@ -18,6 +66,29 @@
         This may also include a link to the relevant sources for the info
     
     SECTION 4 - Details about the teams capabilities and associations-->
+
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="socials">
+                <div class="socials-header">Connect with us!</div>
+                <div class="socials-links">
+                    <ul class="socials-hyperlinks">
+                        <li>Email</li>
+                        <li>Linkedin</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-nav-bar">
+            <ul class="nav-items">
+                <li>About</li>
+                <li>Projects</li>
+                <li>Resources</li> 
+                <li>Funding bodies</li>
+                <li>Contact</li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
 
