Added SHARRC mission and description

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -46,13 +46,39 @@
     </div>
 
     <section class="text-section">
-        <div class="para-one">
+        <div class="para">
             At SHARRC, we believe that technological innovation can play a crucial role 
             in improving sports access, performance, equipment, and rehabilitation outcomes. 
             We are committed to using innovative approaches to improve health outcomes and 
             assist with Sport NZ's vision of "getting Every Body Active in Aotearoa New 
-            Zealand." Our team is dedicated to making a positive impact on the health of our 
-            nation, and we invite you to join us in promoting a healthy and active lifestyle.
+            Zealand."
+        </div>
+        <div class="para">
+            New Zealand is facing some serious health challenges caused by ageing populations, 
+            sedentary lifestyles, and unhealthy habits like smoking, poor diet, and alcohol 
+            and drug abuse. These factors can lead to a variety of health issues, including 
+            heart disease, diabetes, obesity, cancer, and mental health problems like 
+            depression and anxiety.
+        </div>
+
+        <div class="para">
+            The cost of these health issues is staggering - over $100 million per condition 
+            or risk factor every year! Our team is passionate about promoting healthy living 
+            and helping people prevent and overcome these health concerns. We believe that 
+            everyone should have access to the best health care and support, regardless of 
+            their background.
+        </div>
+
+        <div class="para">
+            To prevent and rehabilitate from these health conditions, promoting physical 
+            activity is essential. Fortunately, the NZ Ministry of Health has several 
+            initiatives in place to promote physical activity and healthy eating habits, 
+            such as the Healthy Active Learning initiative and Green Prescriptions.
+
+            Physical activity not only improves physical health but also mental well-being, 
+            as evidenced by a study on Chinese children. The study showed a positive 
+            correlation between physical activity levels and mental well-being, self-efficacy, 
+            and resilience.
         </div>
     </section>
     <!-- This page will be broken up into several sections
