--- a/Pages/about.html
+++ b/Pages/about.html
@@ -47,7 +47,22 @@
 
     <section class="text-section">
         <div class="para">
-            At SHARRC, we believe that technological innovation can play a crucial role 
+            Sport has the potential to positively affect the lives of nearly every New 
+            Zealander, whether it be through the sense of national pride that arises through 
+            watching our national athletes and teams compete or through our own involvement 
+            in health via sports and physical activity.
+
+            SHARRC is a multi- and inter-disciplinary research cluster, which combines domains 
+            of sports, health sciences, engineering, design, data science, life sciences, 
+            human-computer interaction, social and psychological sciences, business, and law.
+
+            Without diverse voices as part of the conversation, it is nearly impossible to 
+            discover optimal solutions. According to CERIC in Canada, diversity leads to innovation [17]. 
+            The ability to imagine something new or come up with a new solution wholly depends upon a 
+            variety of viewpoints involved in the brainstorming, design, testing, manufacture, and feedback. 
+        </div>
+        <div class="para">
+            We believe technological innovation plays a crucial role 
             in improving sports access, performance, equipment, and rehabilitation outcomes. 
             We are committed to using innovative approaches to improve health outcomes and 
             assist with Sport NZ's vision of "getting Every Body Active in Aotearoa New 
