--- a/Pages/about.html
+++ b/Pages/about.html
@@ -101,12 +101,14 @@
         nice picture and motivational, but vague, statemnent about SHARRC's vision
     
     SECTION 2 - details about sharrcs vision
-
-    SECTION 3 - Details about why sharrc exists
-        This vcould be a slide show with a statement from the proposal for each slide.
-        This may also include a link to the relevant sources for the info
+                - whys does sharrc exist
+                - What is sharrc's vision
+                - Statement of cultural inequality
+                - picture break with some nice stuff
+                - details about who we are and what we aim to do
+                - details about where we are based
     
-    SECTION 4 - Details about the teams capabilities and associations-->
+    SECTION 4 - Details about the teams capabilities and associations -->
 
     <footer class="footer">
         <div class="footer-content">
