Edited text - about page

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -38,53 +38,56 @@
             <div class="hero-content-wrapper">
                 <h1 class="hero-header">About</h1>
                 <div class="hero-content">
-                    Enhancing humanity through innovative solutions in sports engineering, sports performance, 
-                    health, and rehabilitation to active lifestyles. 
+                    Enhancing humanity through innovative solutions in sports engineering, performance, 
+                    health, and rehabilitation. 
                 </div>
             </div>
         </div>
     </div>
 
     <section class="text-section">
-        <div class="para">
-            Sport has the potential to positively affect the lives of nearly every New 
-            Zealander, whether it be through the sense of national pride that arises through 
-            watching our national athletes and teams compete or through our own involvement 
-            in health via sports and physical activity.
+        <h1>Why do we exist?</h1>
+        <p class="para">
+            <b>Sport has the potential to positively affect the lives of nearly everyone.</b> 
+            Whether through our own involvement or the sense of national pride when watching 
+            our national athletes and teams compete, <b>we believe technological innovation 
+            plays a crucial role.</b>
+        </p>
+        <p class="para">
+            SHARRC is a diverse team with expert knowledge in sports, health, and life 
+            sciences, engineering, data science, psychology, business, and law, dedicated to using 
+            innovative approaches to improve sports access, performance, equipment, and rehabilitation. 
+            Our ultimate goal is to help people live healthier lives and achieve Sport NZ's vision of 
+            "getting everbody active in Aotearoa New Zealand."
+        </p>
+    </section>
 
-            SHARRC is a multi- and inter-disciplinary research cluster, which combines domains 
-            of sports, health sciences, engineering, design, data science, life sciences, 
-            human-computer interaction, social and psychological sciences, business, and law.
-
+    <section class="picture-section">
+        <p class="quote">
             Without diverse voices as part of the conversation, it is nearly impossible to 
-            discover optimal solutions. According to CERIC in Canada, diversity leads to innovation [17]. 
-            The ability to imagine something new or come up with a new solution wholly depends upon a 
-            variety of viewpoints involved in the brainstorming, design, testing, manufacture, and feedback. 
-        </div>
-        <div class="para">
-            We believe technological innovation plays a crucial role 
-            in improving sports access, performance, equipment, and rehabilitation outcomes. 
-            We are committed to using innovative approaches to improve health outcomes and 
-            assist with Sport NZ's vision of "getting Every Body Active in Aotearoa New 
-            Zealand."
-        </div>
-        <div class="para">
+            discover optimal solutions. The ability to imagine something new or come up with 
+            a new solution wholly depends upon involving a variety of viewpoints. 
+        </p>
+        <div class="quoter">United nations - probably</div>
+    </section>
+
+    <section class="text-section">
+        <p class="para">
             New Zealand is facing some serious health challenges caused by ageing populations, 
             sedentary lifestyles, and unhealthy habits like smoking, poor diet, and alcohol 
             and drug abuse. These factors can lead to a variety of health issues, including 
             heart disease, diabetes, obesity, cancer, and mental health problems like 
             depression and anxiety.
-        </div>
-
-        <div class="para">
+        </p>
+        <p class="para">
             The cost of these health issues is staggering - over $100 million per condition 
             or risk factor every year! Our team is passionate about promoting healthy living 
             and helping people prevent and overcome these health concerns. We believe that 
             everyone should have access to the best health care and support, regardless of 
             their background.
-        </div>
+        </p>
 
-        <div class="para">
+        <p class="para">
             To prevent and rehabilitate from these health conditions, promoting physical 
             activity is essential. Fortunately, the NZ Ministry of Health has several 
             initiatives in place to promote physical activity and healthy eating habits, 
@@ -94,7 +97,9 @@
             as evidenced by a study on Chinese children. The study showed a positive 
             correlation between physical activity levels and mental well-being, self-efficacy, 
             and resilience.
-        </div>
+
+            
+        </p>
     </section>
     <!-- This page will be broken up into several sections
     SECTION 1 - small hero section:
