--- a/Pages/about.html
+++ b/Pages/about.html
@@ -98,7 +98,16 @@
             correlation between physical activity levels and mental well-being, self-efficacy, 
             and resilience.
 
-            
+            Technological innovation is a powerful tool to improve equality of access, 
+            enhance sports performance, redesign equipment and apparel, reduce risk of injury, 
+            and improve outcomes for rehabilitation
+
+            The proposed team has a significant diversity of experience, from sports 
+            physiology, physiological modelling, well-being, human factors and behavioural 
+            science, through to human interface technology and interactive game design. To 
+            achieve the ambitious goals within this proposal, this diverse team is essential 
+            to success. The project team also includes a diverse range of seniority, from 
+            postdoctoral research fellows and lecturers, through to Professors
         </p>
     </section>
     <!-- This page will be broken up into several sections
