--- a/Pages/about.html
+++ b/Pages/about.html
@@ -58,7 +58,10 @@
             sciences, engineering, data science, psychology, business, and law, dedicated to using 
             innovative approaches to improve sports access, performance, equipment, and rehabilitation. 
             Our ultimate goal is to help people live healthier lives and achieve Sport NZ's vision of 
-            "getting everbody active in Aotearoa New Zealand."
+            "getting everbody active in Aotearoa New Zealand." Our team is passionate about promoting 
+            healthy living and helping people prevent and overcome these health concerns. We believe 
+            that everyone should have access to the best health care and support, regardless of 
+            their background.
         </p>
     </section>
 
@@ -68,40 +71,30 @@
             discover optimal solutions. The ability to imagine something new or come up with 
             a new solution wholly depends upon involving a variety of viewpoints. 
         </p>
-        <div class="quoter">United nations - probably</div>
+        <button class="quoter">Meet the team</button>
     </section>
 
     <section class="text-section">
+        <h1>Challenges</h1>
         <p class="para">
-            New Zealand is facing some serious health challenges caused by ageing populations, 
-            sedentary lifestyles, and unhealthy habits like smoking, poor diet, and alcohol 
-            and drug abuse. These factors can lead to a variety of health issues, including 
-            heart disease, diabetes, obesity, cancer, and mental health problems like 
-            depression and anxiety.
+            <b>New Zealand is facing some serious health challenges</b> caused by ageing populations, 
+            sedentary lifestyles, and unhealthy habits like smoking, poor diet, or alcohol abuse. 
+            These factors contribute to a high rates of heart disease, diabetes, obesity, 
+            cancer, and mental health problems like depression and anxiety, costing over $100 million 
+            per condition or risk factor every year!
         </p>
         <p class="para">
-            The cost of these health issues is staggering - over $100 million per condition 
-            or risk factor every year! Our team is passionate about promoting healthy living 
-            and helping people prevent and overcome these health concerns. We believe that 
-            everyone should have access to the best health care and support, regardless of 
-            their background.
+            Physical activity is essential to not only improve physical health 
+            but also mental well-being, self-efficacy, and resilience. While the NZ Ministry of 
+            Health has several initiatives in place to promote physical activity and healthy eating habits, 
+            such as the Healthy Active Learning initiative and Green Prescriptions, Technological 
+            innovation is a powerful tool to improve equality of access, enhance sports 
+            performance, redesign equipment and apparel, reduce risk of injury, and improve 
+            outcomes for rehabilitation.
         </p>
 
+        <h1>Who are we?</h1>
         <p class="para">
-            To prevent and rehabilitate from these health conditions, promoting physical 
-            activity is essential. Fortunately, the NZ Ministry of Health has several 
-            initiatives in place to promote physical activity and healthy eating habits, 
-            such as the Healthy Active Learning initiative and Green Prescriptions.
-
-            Physical activity not only improves physical health but also mental well-being, 
-            as evidenced by a study on Chinese children. The study showed a positive 
-            correlation between physical activity levels and mental well-being, self-efficacy, 
-            and resilience.
-
-            Technological innovation is a powerful tool to improve equality of access, 
-            enhance sports performance, redesign equipment and apparel, reduce risk of injury, 
-            and improve outcomes for rehabilitation
-
             The proposed team has a significant diversity of experience, from sports 
             physiology, physiological modelling, well-being, human factors and behavioural 
             science, through to human interface technology and interactive game design. To 
