Completed initial format of about page

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -17,7 +17,7 @@
             <i id="menu-bars" class="fa-solid fa-bars"></i>
             <ul class="nav-items">
                 <li>
-                    <a href="Pages/about.html">ABOUT</a>
+                    <a href="about.html">ABOUT</a>
                 </li>
                 <li>
                     <a href="Pages/about.html">PROJECTS</a>
@@ -37,10 +37,6 @@
         <div class="hero">
             <div class="hero-content-wrapper">
                 <h1 class="hero-header">About</h1>
-                <div class="hero-content">
-                    Enhancing humanity through innovative solutions in sports engineering, performance, 
-                    health, and rehabilitation. 
-                </div>
             </div>
         </div>
     </div>
@@ -48,20 +44,28 @@
     <section class="text-section">
         <h1>Why do we exist?</h1>
         <p class="para">
-            <b>Sport has the potential to positively affect the lives of nearly everyone.</b> 
-            Whether through our own involvement or the sense of national pride when watching 
-            our national athletes and teams compete, <b>we believe technological innovation 
-            plays a crucial role.</b>
+            <b>New Zealand is facing significant health challenges</b> due to ageing populations, 
+            sedentary lifestyles, and unhealthy habits. These factors contribute to a 
+            high rate of diseases, including heart disease, diabetes, obesity, cancer, 
+            depression, and anxiety, <b>costing over $100 million per condition annually.</b>  
         </p>
         <p class="para">
-            SHARRC is a diverse team with expert knowledge in sports, health, and life 
-            sciences, engineering, data science, psychology, business, and law, dedicated to using 
-            innovative approaches to improve sports access, performance, equipment, and rehabilitation. 
-            Our ultimate goal is to help people live healthier lives and achieve Sport NZ's vision of 
-            "getting everbody active in Aotearoa New Zealand." Our team is passionate about promoting 
-            healthy living and helping people prevent and overcome these health concerns. We believe 
-            that everyone should have access to the best health care and support, regardless of 
-            their background.
+            Physical activity is essential for improving physical and mental health, but 
+            technological innovation is needed to improve equality of access, enhance 
+            sports performance, reduce injury risks, and improve rehabilitation outcomes. 
+            While the NZ Ministry of Health has several initiatives in place, SHARRC believes 
+            that technology can play a crucial role in addressing these challenges.
+        </p>
+        <h1>Who we are</h1>
+        <p class="para">
+            SHARRC is a multidisciplinary team made up of experts in  
+            sports physiology and health, data science, engineering, psychology, human 
+            interface technology, interactive game design, and law. We use translational approaches 
+            to improve sports access, performance, equipment, and rehabilitation outcomes, with the 
+            goal of helping people live healthier lives. The team is diverse in experience and seniority, 
+            ranging from PhD and postdoctoral research fellows to professors and industry leaders. Their 
+            ultimate goal is to achieve Sport NZ's vision of getting everyone active in New Zealand and 
+            ensuring access to quality healthcare regardless of background.
         </p>
     </section>
 
@@ -69,45 +73,49 @@
         <p class="quote">
             Without diverse voices as part of the conversation, it is nearly impossible to 
             discover optimal solutions. The ability to imagine something new or come up with 
-            a new solution wholly depends upon involving a variety of viewpoints. 
+            a new solution entirely depends upon involving a variety of viewpoints. 
         </p>
         <button class="quoter">Meet the team</button>
     </section>
 
     <section class="text-section">
-        <h1>Challenges</h1>
-        <p class="para">
-            <b>New Zealand is facing some serious health challenges</b> caused by ageing populations, 
-            sedentary lifestyles, and unhealthy habits like smoking, poor diet, or alcohol abuse. 
-            These factors contribute to a high rates of heart disease, diabetes, obesity, 
-            cancer, and mental health problems like depression and anxiety, costing over $100 million 
-            per condition or risk factor every year!
-        </p>
-        <p class="para">
-            Physical activity is essential to not only improve physical health 
-            but also mental well-being, self-efficacy, and resilience. While the NZ Ministry of 
-            Health has several initiatives in place to promote physical activity and healthy eating habits, 
-            such as the Healthy Active Learning initiative and Green Prescriptions, Technological 
-            innovation is a powerful tool to improve equality of access, enhance sports 
-            performance, redesign equipment and apparel, reduce risk of injury, and improve 
-            outcomes for rehabilitation.
-        </p>
-
-        <h1>Who are we?</h1>
-        <p class="para">
-            The proposed team has a significant diversity of experience, from sports 
-            physiology, physiological modelling, well-being, human factors and behavioural 
-            science, through to human interface technology and interactive game design. To 
-            achieve the ambitious goals within this proposal, this diverse team is essential 
-            to success. The project team also includes a diverse range of seniority, from 
-            postdoctoral research fellows and lecturers, through to Professors
-        </p>
+        <h1>Our partners and capabilities?</h1>
+        <div class="para">
+            <p class="para">
+                Based at the University of Canterbury in Christchurch, New Zealand, we are becoming the 
+                New Zealand center for Exercise is Medicine®. We have partnered with the American College 
+                of Sports Medicine to lead this global initiative in the Australasia region. Additionally, 
+                we are affiliated with MedTech CoRE, the Canterbury District Health Board, and industry 
+                partners such as Enztec and Ossis. We deliver impact by providing research, enhancing 
+                services and developing solutions in the following areas:
+            </p>
+            <div class="para" id="capabilities">
+                <h4>Sports Performance</h4>
+                Research and engineering for High Performance training, monitoring, 
+                assessment, and coaching as well as supporting injury prevention and 
+                rehabilitation. Clients: elite sports clubs, HPSNZ, Para Sport NZ, Crusaders.
+                <h4>Active Lifestyle Solutions</h4>
+                Engineering purpose-built, physical activity solutions for New Zealanders 
+                in their everyday lives
+                <h4>Exercise Prescriptions</h4>
+                Working alongside clinicians and in partnership with CDHB to devise individualised 
+                exercise prescription programmes to enhance outcomes of patients during and after 
+                medical treatment
+                <h4>Rehabilitation Solutions</h4>
+                Rehabilitation research and technology for return to healthy and active lifestyles
+                <h4>Technology</h4>
+                Develop solutions for monitoring physical activity, well-being, and mental health, 
+                design devices and sport equipment for the general public, including app & immersive 
+                game development, and utilise the existing state-of-the-art capabilities at UC to 
+                perform cutting edge research in sport, health, and rehabilitation
+                <h4>Mental Well-being</h4>
+                Researching and actively engaging the social and psychological sciences in regards 
+                to the role of sports and physical activity in well-being
+            </div>
+        </div>
     </section>
-    <!-- This page will be broken up into several sections
-    SECTION 1 - small hero section:
-        nice picture and motivational, but vague, statemnent about SHARRC's vision
     
-    SECTION 2 - details about sharrcs vision
+    <!-- SECTION 2 - details about sharrcs vision
                 - whys does sharrc exist
                 - What is sharrc's vision
                 - Statement of cultural inequality
