Created mobile only menu

--- a/index.html
+++ b/index.html
@@ -11,10 +11,22 @@
 <body>
     <div class="top-content">
         <header class="header">
-            <h1 class="logo"><a href="#">SHARRC</a></h1>
-            <i id="menu-bars" class="fa-solid fa-bars"></i>
+            <h1 class="logo" id="comp-logo"><a href="#">SHARRC</a></h1>
+            <div class="mobile-menu">
+                <div class="mobile-nav">
+                    <h1 class="logo"><a href="#">SHARRC</a></h1>
+                    <i id="menu-bars" class="fa-solid fa-bars"></i>
+                </div>
+                <div id="myLinks">
+                    <a href="Pages/about.html">ABOUT</a>
+                    <a href="Pages/about.html">PROJECTS</a>
+                    <a href="Pages/about.html">RESOURCES</a>
+                    <a href="Pages/about.html">FUNDING</a>
+                    <a href="Pages/about.html">CONTACT</a>
+                </div>
+            </div>
+            
             <nav class="nav-items">
-                <!-- Nav items will be drop down lists NEED TO LEARN THAT -->
                 <div class="dropdown"><a href="Pages/about.html">ABOUT</a>
                     <i id="drop-down-indicator" class="fa-solid fa-caret-down"></i>
                     <div class="dropdown-content">
@@ -22,7 +34,6 @@
                         <a href="Pages/about-publications.html">Publications</a>
                     </div>
                 </div>
-                <!-- About section will contain  the people involved in the cluster and the publications-->
                 <div class="dropdown">
                     <a href="Pages/about.html">PROJECTS</a>
                     <i id="drop-down-indicator" class="fa-solid fa-caret-down"></i>
@@ -174,6 +185,7 @@
             </ul>
         </div>
     </footer>
+    <script src="script.js"></script>
     
 </body>
 </html>
