--- a/Pages/about.html
+++ b/Pages/about.html
@@ -11,8 +11,20 @@
 <body>
     <div class="top-content">
         <header class="header">
-            <h1 class="logo"><a href="../index.html">SHARRC</a></h1>
-            <i id="menu-bars" class="fa-solid fa-bars"></i>
+            <h1 class="logo" id="comp-logo"><a href="../index.html">SHARRC</a></h1>
+            <div class="mobile-menu">
+                <div class="mobile-nav">
+                    <h1 class="logo"><a href="#">SHARRC</a></h1>
+                    <i id="menu-bars" class="fa-solid fa-bars"></i>
+                </div>
+                <div id="myLinks">
+                    <a href="Pages/about.html">ABOUT</a>
+                    <a href="Pages/about.html">PROJECTS</a>
+                    <a href="Pages/about.html">RESOURCES</a>
+                    <a href="Pages/about.html">FUNDING</a>
+                    <a href="Pages/about.html">CONTACT</a>
+                </div>
+            </div>
             <nav class="nav-items">
                 <!-- Nav items will be drop down lists NEED TO LEARN THAT -->
                 <div class="dropdown"><a href="#">ABOUT</a>
