Added js function to fix menu double click issue

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="mobile-menu">
                 <div class="mobile-nav">
                     <h1 class="logo"><a href="#">SHARRC</a></h1>
-                    <i id="menu-bars" class="fa-solid fa-bars"></i>
+                    <i id="menu-bars" class="fa-solid fa-bars" onclick="showMenu()"></i>
                 </div>
                 <div id="myLinks">
                     <a href="Pages/about.html">ABOUT</a>
