--- a/Pages/about.html
+++ b/Pages/about.html
@@ -14,8 +14,8 @@
             <h1 class="logo" id="comp-logo"><a href="../index.html">SHARRC</a></h1>
             <div class="mobile-menu">
                 <div class="mobile-nav">
-                    <h1 class="logo"><a href="#">SHARRC</a></h1>
-                    <i id="menu-bars" class="fa-solid fa-bars"></i>
+                    <h1 class="logo"><a href="../index.html">SHARRC</a></h1>
+                    <i id="menu-bars" class="fa-solid fa-bars" onclick="showMenu()"></i>
                 </div>
                 <div id="myLinks">
                     <a href="Pages/about.html">ABOUT</a>
@@ -172,6 +172,7 @@
             </ul>
         </div>
     </footer>
+    <script src="../script.js"></script>
 </body>
 </html>
 
