Added pop out menu items for mobile menu

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -18,7 +18,9 @@
                     <i id="menu-bars" class="fa-solid fa-bars" onclick="showMenu()"></i>
                 </div>
                 <div id="myLinks">
-                    <a href="Pages/about.html">ABOUT</a>
+                    <div class="pop-out">
+                        <a href="Pages/about.html">ABOUT</a>
+                    </div>
                     <a href="Pages/about.html">PROJECTS</a>
                     <a href="Pages/about.html">RESOURCES</a>
                     <a href="Pages/about.html">FUNDING</a>
