--- a/index.html
+++ b/index.html
@@ -18,8 +18,24 @@
                     <i id="menu-bars" class="fa-solid fa-bars" onclick="showMenu()"></i>
                 </div>
                 <div id="myLinks">
-                    <a href="Pages/about.html">ABOUT</a>
-                    <a href="Pages/about.html">PROJECTS</a>
+                    <div class="pop-out">
+                        <div>ABOUT</div>
+                        <i id="pop-out-indicator" class="fa-solid fa-caret-right"></i>
+                        <div class="pop-out-content">
+                            <a href="Pages/about.html">About SHARRC</a>
+                            <a href="Pages/about-team.html">Team</a>
+                            <a href="Pages/about-publications.html">Publications</a>
+                        </div>
+                    </div>
+                    <div class="pop-out">
+                        <div>PROJECTS</div>
+                        <i id="pop-out-indicator" class="fa-solid fa-caret-right"></i>
+                        <div class="pop-out-content">
+                            <a href="Pages/about.html">About SHARRC</a>
+                            <a href="Pages/about-team.html">Team</a>
+                            <a href="Pages/about-publications.html">Publications</a>
+                        </div>
+                    </div>
                     <a href="Pages/about.html">RESOURCES</a>
                     <a href="Pages/about.html">FUNDING</a>
                     <a href="Pages/about.html">CONTACT</a>
@@ -27,7 +43,8 @@
             </div>
             
             <nav class="nav-items">
-                <div class="dropdown"><a href="Pages/about.html">ABOUT</a>
+                <div class="dropdown">
+                    <a href="Pages/about.html">ABOUT</a>
                     <i id="drop-down-indicator" class="fa-solid fa-caret-down"></i>
                     <div class="dropdown-content">
                         <a href="Pages/about-team.html">Team</a>
