--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <div class="pop-out">
                             <div class="pop-out-item">
                                 <a class="about" href="#" onclick="showPopOut('.about')">ABOUT</a>
-                                <i id="pop-out-indicator" class="fa-solid fa-caret-down"></i>
+                                <i id="pop-out-indicator-about" class="fa-solid fa-caret-down"></i>
                             </div>
                             <div id="about" class="pop-out-content">
                                 <a href="Pages/about.html">About SHARRC</a>
@@ -33,7 +33,7 @@
                     <div class="pop-out">
                         <div class="pop-out-item">
                             <a class="projects" href="#" onclick="showPopOut('.projects')">PROJECTS</a>
-                            <i id="pop-out-indicator" class="fa-solid fa-caret-down"></i>
+                            <i id="pop-out-indicator-projects" class="fa-solid fa-caret-down"></i>
                         </div>
                         <div id="projects" class="pop-out-content">
                             <a href="Pages/about.html">Current projects</a>
