Added all other pages to folder

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                             <i id="pop-out-indicator-projects" class="fa-solid fa-caret-down"></i>
                         </div>
                         <div id="projects" class="pop-out-content">
-                            <a href="Pages/about.html">Current projects</a>
-                            <a href="Pages/about-team.html">Past projects</a>
+                            <a href="Pages/projects-current.html">Current projects</a>
+                            <a href="Pages/projects-past.html">Past projects</a>
                         </div>
                     </div>
-                    <a href="Pages/about.html">RESOURCES</a>
-                    <a href="Pages/about.html">FUNDING</a>
-                    <a href="Pages/about.html">CONTACT</a>
+                    <a href="Pages/resources.html">RESOURCES</a>
+                    <a href="Pages/funding.html">FUNDING</a>
+                    <a href="Pages/contact.html">CONTACT</a>
                 </div>
             </div>
             
