--- a/Pages/about-publications.html
+++ b/Pages/about-publications.html
@@ -4,9 +4,110 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="page-style.css">
+    <script src="https://kit.fontawesome.com/6fb872766b.js" crossorigin="anonymous"></script>
     <title>Publications</title>
 </head>
 <body>
-    
+    <div class="top-content">
+        <header class="header">
+            <h1 class="logo" id="comp-logo"><a href="#">SHARRC</a></h1>
+            <div class="mobile-menu">
+                <div class="mobile-nav">
+                    <h1 class="logo"><a href="#">SHARRC</a></h1>
+                    <i id="menu-bars" class="fa-solid fa-bars" onclick="showMenu()"></i>
+                </div>
+                <div id="myLinks">
+                        <div class="pop-out">
+                            <div class="pop-out-item">
+                                <a class="about" href="#" onclick="showPopOut('.about')">ABOUT</a>
+                                <i id="pop-out-indicator-about" class="fa-solid fa-caret-down"></i>
+                            </div>
+                            <div id="about" class="pop-out-content">
+                                <a href="Pages/about.html">About SHARRC</a>
+                                <a href="Pages/about-team.html">Team</a>
+                                <a href="#">Publications</a>
+                            </div>
+                        </div>
+                    
+                    <div class="pop-out">
+                        <div class="pop-out-item">
+                            <a class="projects" href="#" onclick="showPopOut('.projects')">PROJECTS</a>
+                            <i id="pop-out-indicator-projects" class="fa-solid fa-caret-down"></i>
+                        </div>
+                        <div id="projects" class="pop-out-content">
+                            <a href="Pages/about.html">Current projects</a>
+                            <a href="Pages/about-team.html">Past projects</a>
+                        </div>
+                    </div>
+                    <a href="Pages/about.html">RESOURCES</a>
+                    <a href="Pages/about.html">FUNDING</a>
+                    <a href="Pages/about.html">CONTACT</a>
+                </div>
+            </div>
+            <nav class="nav-items">
+                <!-- Nav items will be drop down lists NEED TO LEARN THAT -->
+                <div class="dropdown"><a href="about.html">ABOUT</a>
+                    <i id="drop-down-indicator" class="fa-solid fa-caret-down"></i>
+                    <div class="dropdown-content">
+                        <a href="about-team.html">Team</a>
+                        <a href="#">Publications</a>
+                    </div>
+                </div>
+                <!-- About section will contain  the people involved in the cluster and the publications-->
+                <div class="dropdown">
+                    <a href="#">PROJECTS</a>
+                    <i id="drop-down-indicator" class="fa-solid fa-caret-down"></i>
+                    <div class="dropdown-content">
+                        <a href="Pages/about-team.html">Current</a>
+                        <a href="Pages/about-publications.html">Past</a>
+                    </div>
+                </div>
+                <!-- Project will contain the specific projects and some info about each one -->
+                <div class="non-dropdown">
+                    <a href="Pages/about.html">RESOURCES</a>
+                </div> 
+                <!-- Resources will contain the facilities that are available and any open access/publically available data and useable resources -->
+                <div class="non-dropdown">
+                    <a href="Pages/about.html">FUNDING</a>
+                </div>
+                <!-- Small info about each funding partner, what they fund, and what they do. -->
+                <div class="non-dropdown">
+                    <a href="Pages/about.html">CONTACT</a>
+                </div>
+                <!-- Contact info for natalia, nick, etc. -->
+            </nav>
+        </header>
+
+        <div class="hero">
+            <div class="hero-content-wrapper">
+                <h1 class="hero-header">Publications</h1>
+            </div>
+        </div>
+    </div>
+
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="socials">
+                <div class="socials-header">Connect with us!</div>
+                <div class="socials-links">
+                    <ul class="socials-hyperlinks">
+                        <li>Email</li>
+                        <li>Linkedin</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-nav-bar">
+            <ul class="nav-items">
+                <li>About</li>
+                <li>Projects</li>
+                <li>Resources</li> 
+                <li>Funding bodies</li>
+                <li>Contact</li>
+            </ul>
+        </div>
+    </footer>
+    <script src="../script.js"></script>
 </body>
 </html>
