--- a/Pages/about.html
+++ b/Pages/about.html
@@ -11,17 +11,35 @@
 <body>
     <div class="top-content">
         <header class="header">
-            <h1 class="logo" id="comp-logo"><a href="../index.html">SHARRC</a></h1>
+            <h1 class="logo" id="comp-logo"><a href="#">SHARRC</a></h1>
             <div class="mobile-menu">
                 <div class="mobile-nav">
-                    <h1 class="logo"><a href="../index.html">SHARRC</a></h1>
+                    <h1 class="logo"><a href="#">SHARRC</a></h1>
                     <i id="menu-bars" class="fa-solid fa-bars" onclick="showMenu()"></i>
                 </div>
                 <div id="myLinks">
+                        <div class="pop-out">
+                            <div class="pop-out-item">
+                                <a class="about" href="#" onclick="showPopOut('.about')">ABOUT</a>
+                                <i id="pop-out-indicator-about" class="fa-solid fa-caret-down"></i>
+                            </div>
+                            <div id="about" class="pop-out-content">
+                                <a href="Pages/about.html">About SHARRC</a>
+                                <a href="Pages/about-team.html">Team</a>
+                                <a href="Pages/about-publications.html">Publications</a>
+                            </div>
+                        </div>
+                    
                     <div class="pop-out">
-                        <a href="Pages/about.html">ABOUT</a>
+                        <div class="pop-out-item">
+                            <a class="projects" href="#" onclick="showPopOut('.projects')">PROJECTS</a>
+                            <i id="pop-out-indicator-projects" class="fa-solid fa-caret-down"></i>
+                        </div>
+                        <div id="projects" class="pop-out-content">
+                            <a href="Pages/about.html">Current projects</a>
+                            <a href="Pages/about-team.html">Past projects</a>
+                        </div>
                     </div>
-                    <a href="Pages/about.html">PROJECTS</a>
                     <a href="Pages/about.html">RESOURCES</a>
                     <a href="Pages/about.html">FUNDING</a>
                     <a href="Pages/about.html">CONTACT</a>
@@ -63,7 +81,7 @@
 
         <div class="hero">
             <div class="hero-content-wrapper">
-                <h1 class="hero-header">About</h1>
+                <h1 class="hero-header">About SHARRC</h1>
             </div>
         </div>
     </div>
